...
    <string name="imageBtnLoginText">Login</string>


    <!-- Register -->
    <string name="title_activity_register">Register</string>
    <string name="registerText">Create an account</string>
    <string name="regEmail">Email</string>
    <string name="regPass">Password</string>
    <string name="regConfirmPass">Confirm Password</string>
    <string name="regBtn">Sign up</string>
    <string name="regNotRequired"><u>Already have an account? Sign in!</u></string>
    <string name="regProgressBar">Progress Bar Register</string>


    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="loginText">Log in to your account</string>
    <string name="loginEmail">Email</string>
    <string name="loginPass">Password</string>
    <string name="loginBtn">Sign in</string>
    <string name="loginProgressBar">Progress Bar Login</string>


    <!-- Mainpage -->
    <string name="title_activity_mainpage">Mainpage</string>
    <string name="settingsBtn">Settings</string>
...
    <string name="userInfoRoomText"><u>No Info!</u></string>
    <string name="userInfoAdditional">Extra \nInfo:</string>
    <string name="userInfoAdditionalText"><u>No Info!</u></string>
    <string name="userInfoCloseBtn">Close</string>

    <!-- TestLogin -->
    <string name="loginFailed">The password is invalid or the user does not have a password.</string>
    <string name="passwordIsEmpty">Password is required!</string>
    <string name="passwordIsTooSmall">The password should be at least 6 characters!</string>
    <string name="emailIsRequired">Email address is required!</string>
    <string name="emailIsInvalid">Enter a valid email!</string>

    <!-- TestRegister -->
    <string name="registrationSuccessful">Your registration was successful!</string>
    <string name="emailExistsRegistrationFailed">Email is already taken!</string>

    <!-- TestInviteMembers -->
    <string name="nobodyInvited">Nobody invited!</string>


</resources>
...
